TEST_PROGRAMS/VALID/09/strings.go
package strings

func main() {
    s := ";alksdj\nfar\"asdlkfasldkfjads;"
    t := `;alskdfja
    a;sld\nkfa\wlk \e\qner;


laksdf`
}
