TEST_PROGRAMS/INVALID/03/invalid_print4.go
package main

func f() {

	if x { 

		id = 123;
		
		println("my id:",a)
		print x;
	}
}
